# AIAS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  base_config.sql  docker-compose.yml  main.py  pyproject.toml  read_logs.py  requirements.txt  train-requirements.txt
.github/ISSUE_TEMPLATE/: bug.md  question.md  suggestion.md
.github/workflows/: codeql-analysis.yml  dependency-review.yml  pre-commit-check.yml  pylint.yml  releaser.yml  runner.yml
ai/: analyser.py  predictor.py  train.py
doc/: privacy-policy.html  privacy-policy.md  terms-and-conditions.html  terms-and-conditions.md
ext/: admin.py  automod.py  automod_management.py  autoslowmode.py  misc.py  rules.py  system.py  training.py
res/templates/: blacklist.json  whitelist.json
utils/: autocomplete.py  blacklist.py  bot.py  checks.py  constants.py  datamodels.py  db_updater.py  dis_logging.py  embeds.py  enums.py  env.py  errors.py  nicknames.py  utils.py  views.py
utils/filters/: blacklist.py  links.py  whitelist.py
utils/processors/: antiraid.py  messages.py
