[tool.poetry]
name = "AIAS"
version = "1.0"
description = "AIAS (Artifical Intelligence AntiSpam) is an open-source Discord bot that has innovative moderation features, such as nextgen word filter and AI-based spam detection."
authors = ["Exenifix"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
disnake = "^2.5.2"
python-dotenv = "^0.20.0"
scikit-learn = "^1.1.2"
exencolorlogs = "^1.0.2"
psutil = "^5.9.2"
asyncpg = "^0.26.0"
emoji = "^2.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
