[tool.poetry]
name = "AIAS"
version = "1.0"
description = "AIAS (Artifical Intelligence AntiSpam) is an open-source Discord bot that has innovative moderation features, such as nextgen word filter and AI-based spam detection."
authors = ["Exenifix"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
disnake = "^2.7.0"
python-dotenv = "^0.21.0"
scikit-learn = "^1.2.0"
exencolorlogs = "^1.0.2"
psutil = "^5.9.4"
asyncpg = "^0.27.0"
emoji = "^2.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
