[tool.poetry]
name = "AIAS"
version = "1.0"
description = "AIAS (Artifical Intelligence AntiSpam) is an open-source Discord bot that has innovative moderation features, such as nextgen word filter and AI-based spam detection."
authors = ["Exenifix"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
disnake = "^2.8.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.2.1"
exencolorlogs = "^1.1.1"
psutil = "^5.9.4"
asyncpg = "^0.27.0"
emoji = "^2.2.0"
exenenv = "^1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.187"
isort = "^5.11.3"
black = "^23.1.0"

[tool.isort]
profile = "black"
line_length = 125

[tool.black]
line-length = 125
target-version = ["py311"]

[tool.ruff]
line-length = 125
target-version = "py310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
